--- a/osm/index.html
+++ b/osm/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>我的地图应用</title>
+    <title>map</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- 引入Leaflet CSS -->
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v1.7.1/leaflet.css" />
+    <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet/v1.7.1/leaflet.css" />
 
     <!-- 引入自定义的CSS文件 -->
     <link rel="stylesheet" href="style.css">
@@ -15,7 +15,7 @@
     <div id="map" style="width: 1520px; height: 695px;"></div>
 
     <!-- 引入Leaflet JavaScript -->
-    <script src="http://cdn.leafletjs.com/leaflet/v1.7.1/leaflet.js"></script>
+    <script src="https://cdn.leafletjs.com/leaflet/v1.7.1/leaflet.js"></script>
 
     <!-- 引入自定义的JavaScript文件 -->
     <script src="script.js"></script>
